test/org/midica/testfiles/failing/pattern-redefined.midica
INCLUDE inc/instruments.midica

PATTERN p1
	0 /4
END

PATTERN p1
	0 /8
END

